<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home" />
    
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification"
        android:title="Notifications" />
    
    <item
        android:id="@+id/nav_requests"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/requests" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
